DHFPROD-926 fix QuickStart UI style issues
These issues occurred after upgrading to Angular 6. Our MDL library does not currently support Angular 6.

- Remove extra spacing on sides of folder browser
- Adjust bottom border in selected text fields

--- a/quick-start/src/main/ui/app/entity-modeler/entity-editor.component.scss
+++ b/quick-start/src/main/ui/app/entity-modeler/entity-editor.component.scss
@@ -17,6 +17,10 @@ $bg-color: unquote("rgb(#{$palette-datahub-500})");
   width: 100%;
 }
 
+/deep/ .mdl-textfield__label:after {
+  bottom: 12px;
+}
+
 table.properties {
   border-collapse: collapse;
   border: 1px solid #ccc;
